# pysol

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: coils.md  conf.py  elliptics.md  filaments.md  index.md  mutual.md  reference.md  selves.md  usage.md
src/inductance/: __init__.py  __main__.py  _numba.py  coils.py  elliptics.py  filaments.py  inductance.py  mutual.py  self.py  utils.py
src/pysol/: __init__.py  __main__.py  elliptics.py  inductance.py
tests/: __init__.py  coverage_env.py  test_elliptics.py  test_ldx.py  test_lyle.py  test_main.py  test_maxwell_fil.py  test_new_dipole.py  triangle_gmd.py
