[tool.poetry]
name = "inductance"
# version set in git tag
version = "0.0.0"
description = "Code for 2D inductance calculations"
authors = ["Darren Garnier <garnier@mit.edu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dgarnier/inductance"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24"
numba = "^0.57"

[tool.poetry.group.dev.dependencies]
poetry = "^1.5.1"
nox = "^2023.4.22"
nox-poetry = "^1.0.0"
dunamai = "^1.17.0"
mpmath = "^1.0.0"

[tool.poetry-dynamic-versioning]
enable = true
metadata = true

[tool.poetry-dynamic-versioning.substitution]
folders = [
  { path = "src" }
]

[build-system]
requires = ["poetry-core>=1.6.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
extend-exclude = '''
( src/elliptics.py )
'''

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "stubs"

[tool.coverage.paths]
source = ["tests", "src/inductance"]
